2009-03-23  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/getCentroidSeed.m:
	Added code for weighted centroid with image intensity.

2009-03-23  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/testVD2CVD.m:
	Embedbed image into params structure.
	Provided regMaxIter into params structure.

2009-03-23  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/: getCentroidVD.m, getCentroidVDFast.m:
	Removed unused argument maxIter.

2009-03-23  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/computeVDFast.m:
	Improved code for building neighbour list.

2009-03-23  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/cmpVDalgo.m:
	Added additional equality check of (lambda,v) matrices.

2009-03-23  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/: getCentroidSeed.m, getCentroidVD.m, getCentroidVDFast.m:
	Added params as an argument in order to access the image as potential
	weight ffunction to calculate the centroid Voronoi diagram.

2009-03-23  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/plotDT.m:
	Added alternative code using DelaunayTri and triplot functions.

2009-03-20  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/plotHistHC.m:
	Do not assume that divide/mergeSHC and dividemergeHCThreshold history data
	are in the same VD structure and provide both DVD and MVD structures.

2009-03-20  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/mergeVDFast.m:
	Report mergeSHC and mergeHCThreshold history in the VD structure before
	exiting the function since computeVDFast overwrite the VD structure at each
	iteration.

2009-03-20  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/divideVDFast.m:
	Report divSHC and divHCThreshold history in the VD structure before exiting
	the function since computeVDFast overwrite the VD structure at each
	iteration.

2009-03-20  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/: VOISEf.m, divideVDFast.m, getCentroidVDFast.m,
	  mergeVDFast.m:
	Added `faster' code that compute the entire Voronoi diagram uusing the
	Matlab voronoin function and update the different necessary structures of