@@ -1,3 +1,8 @@
+2009-03-24  Patrick Guio <p.guio@ucl.ac.uk>
+
+	* matlab/plotHistHC.m:
+	Added diagnostic of number of seeds as function of iterations.
+
 2009-03-23  Patrick Guio <p.guio@ucl.ac.uk>
 
 	* matlab/getCentroidSeed.m:
